# OmniGen

./: .gitignore  README.md  pyproject.toml
configs/: debug.yaml  debug2.yaml  vae_16x16x16.yaml  vae_16x16x4.yaml  vae_32x32x16.yaml  vae_32x32x4.yaml  video_vae_3x16x16x32.yaml  video_vae_5x16x16x16.yaml  video_vae_5x16x16x4.yaml  video_vae_5x32x32x16.yaml  video_vae_5x32x32x16_stage2.yaml  video_vae_5x32x32x4.yaml
scripts/: convert_lpips.py  inflate_conv_for_video_vae.py
src/omni_gen/: __main__.py  configs.py
src/omni_gen/data/: image_dataset.py  ms_dataloader.py  streaming_image_dataset.py  streaming_video_dataset.py  video_dataset.py
src/omni_gen/models/video_vae/: __init__.py  activations.py  attention.py  attention_processors.py  autoencoder_kl.py  common.py  decoder.py  discriminator.py  down_blocks.py  downsamplers.py  encoder.py  lpips.py  mid_blocks.py  up_blocks.py  upsamplers.py  vae_loss.py
src/omni_gen/runners/: accelerate_runner.py  deepspeed_runner.py  runner.py  sdxl_trainer.py  vae_ds_trainer.py  vae_trainer.py
src/omni_gen/utils/: accelerate.py  distributed.py  distributions.py  ema.py  inflation.py  logging.py  lr_schedulers.py
