[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-gen"
dynamic = ["version"]
description = "Sota Generative Models"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "./LICENSE" }
keywords = ["Generative Models"]
authors = [
  { name = "Ming Yang", email = "ymviv@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "torch>=2.2.1",
  "einops>=0.7.0",
  "accelerate>=0.28.0",
  "ray[train]>=2.9.3",
  "bitsandbytes>=0.43.0",
  "imageio>=2.34.0",
  "av>=11.0.0",
  "deepspeed>=0.14.0",
  "jsonargparse[argcomplete,signatures,urls]>=4.27.6",
  "diffusers>=0.27.2",
  "transformers>=4.38.2",
  "datasets>=2.18.0",
  "xformers>=0.0.25",
  "wandb>=0.16.5",
  "moviepy>=1.0.3",
  "litdata>=0.2.3",
]

[project.urls]
Documentation = "https://github.com/vivym/OmniGen#readme"
Issues = "https://github.com/vivym/OmniGen/issues"
Source = "https://github.com/vivym/OmniGen"

[tool.setuptools.dynamic]
version = {attr = "omni_gen.__version__"}
